--- a/Substation Builder/Pages/DatabaseView/BreakerPage.xaml
+++ b/Substation Builder/Pages/DatabaseView/BreakerPage.xaml
@@ -1,12 +1,11 @@
-﻿<Page x:Class="Substation_Builder.View.BreakerPage"
+﻿<UserControl x:Class="Substation_Builder.Pages.DatabaseView.BreakerPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:EnumHelper="clr-namespace:Substation_Builder.Helpers"
       xmlns:model="clr-namespace:Substation_Builder.Model"
-      mc:Ignorable="d" 
-      Title="BreakerView">
+      mc:Ignorable="d">
 
     <!-- Breaker Template -->
     <StackPanel>
@@ -22,7 +21,7 @@
         </StackPanel.Triggers>
 
         <StackPanel>
-            <Label Content="Circuit Breaker" Margin="4,-10,0,10" Opacity="0.9" FontSize="22" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+            <Label Content="Circuit Breaker" Opacity="0.9" FontSize="22" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
 
             <DockPanel>
                 <Label Content="Name:" Opacity="0.9" FontSize="16" Margin="0,5,0,0" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Right" Width="105"/>
@@ -67,4 +66,4 @@
         </StackPanel>
         
     </StackPanel>
-</Page>
+</UserControl>
