--- a/Substation Builder/Pages/DatabaseView/RelayPage.xaml
+++ b/Substation Builder/Pages/DatabaseView/RelayPage.xaml
@@ -1,12 +1,11 @@
-﻿<Page x:Class="Substation_Builder.View.RelayPage"
+﻿<UserControl x:Class="Substation_Builder.Pages.DatabaseView.RelayPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:EnumHelper="clr-namespace:Substation_Builder.Helpers"
       xmlns:model="clr-namespace:Substation_Builder.Model"
-      mc:Ignorable="d" 
-      Title="Relay">
+      mc:Ignorable="d">
 
     <!-- Breaker Template -->
     <StackPanel>
@@ -22,7 +21,7 @@
         </StackPanel.Triggers>
 
         <StackPanel Margin="20,0">
-            <Label Content="Protective Relay" Margin="4,-10,0,10" Opacity="0.9" FontSize="22" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+            <Label Content="Protective Relay" Opacity="0.9" FontSize="22" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
 
 
             <DockPanel>
@@ -60,4 +59,4 @@
     </StackPanel>
 
 
-</Page>
+</UserControl>
