--- a/Substation Builder/Pages/DatabaseView/Transformer2Page.xaml
+++ b/Substation Builder/Pages/DatabaseView/Transformer2Page.xaml
@@ -1,11 +1,10 @@
-﻿<Page x:Class="Substation_Builder.View.Transformer2Page"
+﻿<UserControl x:Class="Substation_Builder.Pages.DatabaseView.Transformer2Page"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Substation_Builder.View"
-      mc:Ignorable="d" 
-      Title="Transformer2View">
+      mc:Ignorable="d">
 
     <!-- Thevenin Template -->
     <StackPanel>
@@ -20,8 +19,7 @@
         </StackPanel.Triggers>
 
         <StackPanel>
-            <Label Content="Transformer" Margin="4,-10,0,10" Opacity="0.9" FontSize="22" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-
+            <Label Content="Transformer" Opacity="0.9" FontSize="22" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
 
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -78,12 +76,7 @@
                 </StackPanel>
 
             </Grid>
-
-            <DockPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,5,0,0">
-                <Button Content="Nameplate Data" Margin="5,5,5,0" Click="Button_Click" FontSize="14" Padding="10" VerticalAlignment="Center" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch"/>
-            </DockPanel>
-
         </StackPanel>
 
     </StackPanel>
-</Page>
+</UserControl>
