--- a/Substation Builder/Pages/DatabaseView/TransformerPage.xaml
+++ b/Substation Builder/Pages/DatabaseView/TransformerPage.xaml
@@ -1,10 +1,9 @@
-﻿<Page x:Class="Substation_Builder.View.TransformerPage"
+﻿<UserControl x:Class="Substation_Builder.Pages.DatabaseView.TransformerPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      mc:Ignorable="d" 
-      Title="Transformer">
+      mc:Ignorable="d">
     <!-- Thevenin Template -->
     <StackPanel>
         <StackPanel.Triggers>
@@ -18,7 +17,7 @@
         </StackPanel.Triggers>
 
         <StackPanel>
-            <Label Content="Transformer" Margin="4,-10,0,10" Opacity="0.9" FontSize="22" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+            <Label Content="Transformer" Opacity="0.9" FontSize="22" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
 
             <DockPanel>
                 <Label Content="Name:" Opacity="0.9" FontSize="16" Margin="0" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Right" Width="175"/>
@@ -58,11 +57,7 @@
                     <ComboBoxItem Content="Imp Gnd Wye"/>
                 </ComboBox>
             </DockPanel>
-
-            <DockPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,5,0,0">
-                <Button Content="Impedance Data" Margin="5,5,5,0" Click="Button_Click" FontSize="14" Padding="10" VerticalAlignment="Center" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch"/>
-            </DockPanel>
         </StackPanel>
     </StackPanel>
 
-</Page>
+</UserControl>
